k8s/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
  labels:
    app: frontend
    environment: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      environment: blue
  template:
    metadata:
      labels:
        app: frontend
        environment: blue
    spec:
      containers:
        - name: frontend
          image: potatoj1n/gigboard-fe:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: frontend
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: nginx-main-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
        - name: nginx-main-config
          configMap:
            name: nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: default.conf
                path: default.conf
