k8s/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-blue
spec:
  selector:
    app: frontend
    environment: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
