k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: frontend # 이 서비스가 어떤 Pods에 연결될지 정의
  ports:
    - protocol: TCP
      port: 80 # 서비스가 노출할 포트
      targetPort: 80 # 실제 Pod에서 수신하는 포트
